Fixed bug with jumping login window.

--- a/Src/Styles.css
+++ b/Src/Styles.css
@@ -508,8 +508,8 @@ div.HorVerAlignCenter {
 
 div.StartPageWindow {
 	position         : absolute;
-	top              : 200px;
-	left             : 200px;
+	top              : calc(50% - 100px);
+	left             : calc(50% - 125px);
 	width            : 250px;
 	border           : 1px solid silver;
 	background-color : white;
